--- a/bin/conf.ini
+++ b/bin/conf.ini
@@ -1,43 +1,42 @@
-[app_window]
-save_wnd_pos=1
 ;1 - zapisuje ostatnie po³o¿enie okna, 0 - nie zapisuje, 2 - resetowanie wartoœci
+save_wnd_pos = 1
 
-wnd_pos_x=398
 ;zapisana pozycja okna x
+wnd_pos_x = 398
 
-wnd_pos_y=167
 ;zapisana pozycja okna y
+wnd_pos_y = 167
 
-save_wnd_size=0
 ;1 - zapisuje ostatni rozmiar okna, 0 - nie zapisuje, 2 - resetowanie wartoœci
+save_wnd_size = 0
 
-wnd_w=456
 ;zapisana szerokoœæ okna
+window_w = 456
 
-wnd_h=438
 ;zapisana wysokoœæ okna
+window_h = 438
 
-[synchro_paths]
-synchro_paths_num=2
+;zapis dziennika zdarzeñ: false - wy³¹czony, true - w³¹czony
+log_enabled = true
+
+;zapis historii zmian: false - wy³¹czony, true - w³¹czony
+history_enabled = true
+
+; ŒCIE¯KI SYNCHRONIZACJI
+
 ;liczba synchronizowanych katalogów
+synchro_paths_num = 2
 
-synchro_path_1_source="D:\Igrek\Mp3"
 ;Katlaog Ÿród³a
-synchro_path_1_dest="Mp3"
+synchro_path_1_source = "D:\Igrek\Mp3"
 ;Katalog docelowy
-synchro_path_1_content=0
-;1 - sprawdzanie zawartoœci plików, 0 - sprawdzanie samego rozmiaru plików
+synchro_path_1_dest = "Mp3"
+;true - sprawdzanie zawartoœci plików, false - sprawdzanie samego rozmiaru plików
+synchro_path_1_content_check = false
 
-synchro_path_2_source="D:\Igrek\Gitara"
 ;Katlaog Ÿród³a
-synchro_path_2_dest="Gitara"
+synchro_path_2_source = "D:\Igrek\Gitara"
 ;Katalog docelowy
-synchro_path_2_content=1
-;1 - sprawdzanie zawartoœci plików, 0 - sprawdzanie samego rozmiaru plików
-
-[verbose]
-log_enabled = 1
-;zapis dziennika zdarzeñ: 0 - wy³¹czony, 1 - w³¹czony
-
-history_enabled = 1
-;zapis historii zmian: 0 - wy³¹czony, 1 - w³¹czony
+synchro_path_2_dest = "Gitara"
+;true - sprawdzanie zawartoœci plików, false - sprawdzanie samego rozmiaru plików
+synchro_path_2_content_check = true
