chyba działa, jeszcze niestabilna wersja

--- a/bin/conf.ini
+++ b/bin/conf.ini
@@ -1,10 +1,14 @@
 save_wnd_pos = 1
 
-wnd_pos_x = 649
+wnd_pos_x = 224
 
-wnd_pos_y = 236
+wnd_pos_y = 146
 
 save_wnd_size = 0
+
+window_w = 576
+
+window_h = 418
 
 log_enabled = true
 
