zamina kodowania conf.ini na utf8

--- a/bin/linux/conf.ini
+++ b/bin/linux/conf.ini
@@ -1,4 +1,4 @@
-;1 - zapisuje ostatnie po³o¿enie okna, 0 - nie zapisuje, 2 - resetowanie wartoœci
+;1 - zapisuje ostatnie poÅ‚oÅ¼enie okna, 0 - nie zapisuje, 2 - resetowanie wartoÅ›ci
 save_wnd_pos = 1
 
 ;zapisana pozycja okna x
@@ -7,39 +7,39 @@ wnd_pos_x = 412
 ;zapisana pozycja okna y
 wnd_pos_y = 157
 
-;1 - zapisuje ostatni rozmiar okna, 0 - nie zapisuje, 2 - resetowanie wartoœci
+;1 - zapisuje ostatni rozmiar okna, 0 - nie zapisuje, 2 - resetowanie wartoÅ›ci
 save_wnd_size = 1
 
-;zapisana szerokoœæ okna
+;zapisana szerokoÅ›Ä‡ okna
 window_w = 617
 
-;zapisana wysokoœæ okna
+;zapisana wysokoÅ›Ä‡ okna
 window_h = 401
 
-;zapis dziennika zdarzeñ: false - wy³¹czony, true - w³¹czony
+;zapis dziennika zdarzeÅ„: false - wyÅ‚Ä…czony, true - wÅ‚Ä…czony
 log_enabled = true
 
-;zapis historii zmian: false - wy³¹czony, true - w³¹czony
+;zapis historii zmian: false - wyÅ‚Ä…czony, true - wÅ‚Ä…czony
 history_enabled = true
 
-;zewnêtrzny edytor plików tekstowych: puste - domyœlny
+;zewnÄ™trzny edytor plikÃ³w tekstowych: puste - domyÅ›lny
 external_viewer = gedit
 
-; ŒCIE¯KI SYNCHRONIZACJI
+; ÅšCIEÅ»KI SYNCHRONIZACJI
 
-;liczba synchronizowanych katalogów
+;liczba synchronizowanych katalogÃ³w
 synchro_paths_num = 2
 
-;Katlaog Ÿród³a
+;Katlaog ÅºrÃ³dÅ‚a
 synchro_path_1_source = /mnt/d/Igrek/Mp3
 ;Katalog docelowy
 synchro_path_1_dest = Mp3
-;true - sprawdzanie zawartoœci plików, false - sprawdzanie samego rozmiaru plików
+;true - sprawdzanie zawartoÅ›ci plikÃ³w, false - sprawdzanie samego rozmiaru plikÃ³w
 synchro_path_1_content_check = false
 
-;Katlaog Ÿród³a
+;Katlaog ÅºrÃ³dÅ‚a
 synchro_path_2_source = /mnt/d/Igrek/Gitara
 ;Katalog docelowy
 synchro_path_2_dest = Gitara
-;true - sprawdzanie zawartoœci plików, false - sprawdzanie samego rozmiaru plików
+;true - sprawdzanie zawartoÅ›ci plikÃ³w, false - sprawdzanie samego rozmiaru plikÃ³w
 synchro_path_2_content_check = true
